--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ packages = ["src"]
 [project]
 name = "gemini-mcp-server"
 version = "0.1.3"
-description = "MCP server for Google Gemini CLI integration"
+description = "MCP server for Google Gemini CLI integration with Claude Code"
 authors = [
-    {name = "AI Assistant", email = "ai@example.com"}
+    {name = "Gemini Code Assist MCP Contributors"}
 ]
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.11"
+keywords = ["mcp", "gemini", "claude", "ai", "code-review", "llm"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -22,7 +23,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Quality Assurance",
+    "Topic :: Software Development :: Testing",
 ]
+
 dependencies = [
     "mcp >= 1.0.0",
     "pydantic >= 2.0.0",
@@ -32,6 +36,12 @@ dependencies = [
     "toml >= 0.10.0",
     "colorama >= 0.4.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp"
+Repository = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp"
+Documentation = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp#readme"
+Issues = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp/issues"
 
 [project.optional-dependencies]
 dev = [
@@ -94,7 +104,7 @@ warn_unused_ignores = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-testpaths = ["src"]
+testpaths = ["src", "tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
